docs/upbound-provider-azure/1.3/storage/v1beta1/objectReplication.md
---
permalink: /upbound-provider-azure/1.3/storage/v1beta1/objectReplication/
---

# storage.v1beta1.objectReplication

"ObjectReplication is the Schema for the ObjectReplications API. Copy Block Blobs between a source storage account and a destination account"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDestinationStorageAccountId(destinationStorageAccountId)`](#fn-specforproviderwithdestinationstorageaccountid)
    * [`fn withRules(rules)`](#fn-specforproviderwithrules)
    * [`fn withRulesMixin(rules)`](#fn-specforproviderwithrulesmixin)
    * [`fn withSourceStorageAccountId(sourceStorageAccountId)`](#fn-specforproviderwithsourcestorageaccountid)
    * [`obj spec.forProvider.destinationStorageAccountIdRef`](#obj-specforproviderdestinationstorageaccountidref)
      * [`fn withName(name)`](#fn-specforproviderdestinationstorageaccountidrefwithname)
      * [`obj spec.forProvider.destinationStorageAccountIdRef.policy`](#obj-specforproviderdestinationstorageaccountidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdestinationstorageaccountidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdestinationstorageaccountidrefpolicywithresolve)
    * [`obj spec.forProvider.destinationStorageAccountIdSelector`](#obj-specforproviderdestinationstorageaccountidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdestinationstorageaccountidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdestinationstorageaccountidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdestinationstorageaccountidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.destinationStorageAccountIdSelector.policy`](#obj-specforproviderdestinationstorageaccountidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdestinationstorageaccountidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdestinationstorageaccountidselectorpolicywithresolve)
    * [`obj spec.forProvider.rules`](#obj-specforproviderrules)
      * [`fn withCopyBlobsCreatedAfter(copyBlobsCreatedAfter)`](#fn-specforproviderruleswithcopyblobscreatedafter)
      * [`fn withDestinationContainerName(destinationContainerName)`](#fn-specforproviderruleswithdestinationcontainername)
      * [`fn withFilterOutBlobsWithPrefix(filterOutBlobsWithPrefix)`](#fn-specforproviderruleswithfilteroutblobswithprefix)
      * [`fn withFilterOutBlobsWithPrefixMixin(filterOutBlobsWithPrefix)`](#fn-specforproviderruleswithfilteroutblobswithprefixmixin)
      * [`fn withSourceContainerName(sourceContainerName)`](#fn-specforproviderruleswithsourcecontainername)
      * [`obj spec.forProvider.rules.destinationContainerNameRef`](#obj-specforproviderrulesdestinationcontainernameref)
        * [`fn withName(name)`](#fn-specforproviderrulesdestinationcontainernamerefwithname)
        * [`obj spec.forProvider.rules.destinationContainerNameRef.policy`](#obj-specforproviderrulesdestinationcontainernamerefpolicy)
          * [`fn withResolution(resolution)`](#fn-specforproviderrulesdestinationcontainernamerefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforproviderrulesdestinationcontainernamerefpolicywithresolve)
      * [`obj spec.forProvider.rules.destinationContainerNameSelector`](#obj-specforproviderrulesdestinationcontainernameselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderrulesdestinationcontainernameselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderrulesdestinationcontainernameselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderrulesdestinationcontainernameselectorwithmatchlabelsmixin)
        * [`obj spec.forProvider.rules.destinationContainerNameSelector.policy`](#obj-specforproviderrulesdestinationcontainernameselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specforproviderrulesdestinationcontainernameselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforproviderrulesdestinationcontainernameselectorpolicywithresolve)
      * [`obj spec.forProvider.rules.sourceContainerNameRef`](#obj-specforproviderrulessourcecontainernameref)
        * [`fn withName(name)`](#fn-specforproviderrulessourcecontainernamerefwithname)
        * [`obj spec.forProvider.rules.sourceContainerNameRef.policy`](#obj-specforproviderrulessourcecontainernamerefpolicy)
          * [`fn withResolution(resolution)`](#fn-specforproviderrulessourcecontainernamerefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforproviderrulessourcecontainernamerefpolicywithresolve)
      * [`obj spec.forProvider.rules.sourceContainerNameSelector`](#obj-specforproviderrulessourcecontainernameselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderrulessourcecontainernameselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderrulessourcecontainernameselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderrulessourcecontainernameselectorwithmatchlabelsmixin)
        * [`obj spec.forProvider.rules.sourceContainerNameSelector.policy`](#obj-specforproviderrulessourcecontainernameselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specforproviderrulessourcecontainernameselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforproviderrulessourcecontainernameselectorpolicywithresolve)
    * [`obj spec.forProvider.sourceStorageAccountIdRef`](#obj-specforprovidersourcestorageaccountidref)
      * [`fn withName(name)`](#fn-specforprovidersourcestorageaccountidrefwithname)
      * [`obj spec.forProvider.sourceStorageAccountIdRef.policy`](#obj-specforprovidersourcestorageaccountidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidersourcestorageaccountidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidersourcestorageaccountidrefpolicywithresolve)
    * [`obj spec.forProvider.sourceStorageAccountIdSelector`](#obj-specforprovidersourcestorageaccountidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforprovidersourcestorageaccountidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforprovidersourcestorageaccountidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforprovidersourcestorageaccountidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.sourceStorageAccountIdSelector.policy`](#obj-specforprovidersourcestorageaccountidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidersourcestorageaccountidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidersourcestorageaccountidselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withDestinationStorageAccountId(destinationStorageAccountId)`](#fn-specinitproviderwithdestinationstorageaccountid)
    * [`fn withRules(rules)`](#fn-specinitproviderwithrules)
    * [`fn withRulesMixin(rules)`](#fn-specinitproviderwithrulesmixin)
    * [`fn withSourceStorageAccountId(sourceStorageAccountId)`](#fn-specinitproviderwithsourcestorageaccountid)
    * [`obj spec.initProvider.destinationStorageAccountIdRef`](#obj-specinitproviderdestinationstorageaccountidref)
      * [`fn withName(name)`](#fn-specinitproviderdestinationstorageaccountidrefwithname)
      * [`obj spec.initProvider.destinationStorageAccountIdRef.policy`](#obj-specinitproviderdestinationstorageaccountidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderdestinationstorageaccountidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderdestinationstorageaccountidrefpolicywithresolve)
    * [`obj spec.initProvider.destinationStorageAccountIdSelector`](#obj-specinitproviderdestinationstorageaccountidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderdestinationstorageaccountidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderdestinationstorageaccountidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderdestinationstorageaccountidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.destinationStorageAccountIdSelector.policy`](#obj-specinitproviderdestinationstorageaccountidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderdestinationstorageaccountidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderdestinationstorageaccountidselectorpolicywithresolve)
    * [`obj spec.initProvider.rules`](#obj-specinitproviderrules)
      * [`fn withCopyBlobsCreatedAfter(copyBlobsCreatedAfter)`](#fn-specinitproviderruleswithcopyblobscreatedafter)
      * [`fn withDestinationContainerName(destinationContainerName)`](#fn-specinitproviderruleswithdestinationcontainername)
      * [`fn withFilterOutBlobsWithPrefix(filterOutBlobsWithPrefix)`](#fn-specinitproviderruleswithfilteroutblobswithprefix)
      * [`fn withFilterOutBlobsWithPrefixMixin(filterOutBlobsWithPrefix)`](#fn-specinitproviderruleswithfilteroutblobswithprefixmixin)
      * [`fn withSourceContainerName(sourceContainerName)`](#fn-specinitproviderruleswithsourcecontainername)
      * [`obj spec.initProvider.rules.destinationContainerNameRef`](#obj-specinitproviderrulesdestinationcontainernameref)
        * [`fn withName(name)`](#fn-specinitproviderrulesdestinationcontainernamerefwithname)
        * [`obj spec.initProvider.rules.destinationContainerNameRef.policy`](#obj-specinitproviderrulesdestinationcontainernamerefpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitproviderrulesdestinationcontainernamerefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitproviderrulesdestinationcontainernamerefpolicywithresolve)
      * [`obj spec.initProvider.rules.destinationContainerNameSelector`](#obj-specinitproviderrulesdestinationcontainernameselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderrulesdestinationcontainernameselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderrulesdestinationcontainernameselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderrulesdestinationcontainernameselectorwithmatchlabelsmixin)
        * [`obj spec.initProvider.rules.destinationContainerNameSelector.policy`](#obj-specinitproviderrulesdestinationcontainernameselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitproviderrulesdestinationcontainernameselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitproviderrulesdestinationcontainernameselectorpolicywithresolve)
      * [`obj spec.initProvider.rules.sourceContainerNameRef`](#obj-specinitproviderrulessourcecontainernameref)
        * [`fn withName(name)`](#fn-specinitproviderrulessourcecontainernamerefwithname)
        * [`obj spec.initProvider.rules.sourceContainerNameRef.policy`](#obj-specinitproviderrulessourcecontainernamerefpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitproviderrulessourcecontainernamerefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitproviderrulessourcecontainernamerefpolicywithresolve)
      * [`obj spec.initProvider.rules.sourceContainerNameSelector`](#obj-specinitproviderrulessourcecontainernameselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderrulessourcecontainernameselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderrulessourcecontainernameselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderrulessourcecontainernameselectorwithmatchlabelsmixin)
        * [`obj spec.initProvider.rules.sourceContainerNameSelector.policy`](#obj-specinitproviderrulessourcecontainernameselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitproviderrulessourcecontainernameselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitproviderrulessourcecontainernameselectorpolicywithresolve)
    * [`obj spec.initProvider.sourceStorageAccountIdRef`](#obj-specinitprovidersourcestorageaccountidref)
      * [`fn withName(name)`](#fn-specinitprovidersourcestorageaccountidrefwithname)
      * [`obj spec.initProvider.sourceStorageAccountIdRef.policy`](#obj-specinitprovidersourcestorageaccountidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidersourcestorageaccountidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidersourcestorageaccountidrefpolicywithresolve)
    * [`obj spec.initProvider.sourceStorageAccountIdSelector`](#obj-specinitprovidersourcestorageaccountidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitprovidersourcestorageaccountidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitprovidersourcestorageaccountidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitprovidersourcestorageaccountidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.sourceStorageAccountIdSelector.policy`](#obj-specinitprovidersourcestorageaccountidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidersourcestorageaccountidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidersourcestorageaccountidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of ObjectReplication

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ObjectReplicationSpec defines the desired state of ObjectReplication"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withDestinationStorageAccountId

```ts
withDestinationStorageAccountId(destinationStorageAccountId)
```

"The ID of the destination storage account. Changing this forces a new Storage Object Replication to be created."

### fn spec.forProvider.withRules

```ts
withRules(rules)
```

"One or more rules blocks as defined below."

### fn spec.forProvider.withRulesMixin

```ts
withRulesMixin(rules)
```

"One or more rules blocks as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withSourceStorageAccountId

```ts
withSourceStorageAccountId(sourceStorageAccountId)
```

"The ID of the source storage account. Changing this forces a new Storage Object Replication to be created."

## obj spec.forProvider.destinationStorageAccountIdRef

"Reference to a Account in storage to populate destinationStorageAccountId."

### fn spec.forProvider.destinationStorageAccountIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.destinationStorageAccountIdRef.policy

"Policies for referencing."

### fn spec.forProvider.destinationStorageAccountIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.destinationStorageAccountIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.destinationStorageAccountIdSelector

"Selector for a Account in storage to populate destinationStorageAccountId."

### fn spec.forProvider.destinationStorageAccountIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.destinationStorageAccountIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.destinationStorageAccountIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.destinationStorageAccountIdSelector.policy

"Policies for selection."

### fn spec.forProvider.destinationStorageAccountIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.destinationStorageAccountIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.rules

"One or more rules blocks as defined below."

### fn spec.forProvider.rules.withCopyBlobsCreatedAfter

```ts
withCopyBlobsCreatedAfter(copyBlobsCreatedAfter)
```

"The time after which the Block Blobs created will be copies to the destination. Possible values are OnlyNewObjects, Everything and time in RFC3339 format: 2006-01-02T15:04:00Z. Defaults to OnlyNewObjects."

### fn spec.forProvider.rules.withDestinationContainerName

```ts
withDestinationContainerName(destinationContainerName)
```

"The destination storage container name. Changing this forces a new Storage Object Replication to be created."

### fn spec.forProvider.rules.withFilterOutBlobsWithPrefix

```ts
withFilterOutBlobsWithPrefix(filterOutBlobsWithPrefix)
```

"Specifies a list of filters prefixes, the blobs whose names begin with which will be replicated."

### fn spec.forProvider.rules.withFilterOutBlobsWithPrefixMixin

```ts
withFilterOutBlobsWithPrefixMixin(filterOutBlobsWithPrefix)
```

"Specifies a list of filters prefixes, the blobs whose names begin with which will be replicated."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.rules.withSourceContainerName

```ts
withSourceContainerName(sourceContainerName)
```

"The source storage container name. Changing this forces a new Storage Object Replication to be created."

## obj spec.forProvider.rules.destinationContainerNameRef

"Reference to a Container in storage to populate destinationContainerName."

### fn spec.forProvider.rules.destinationContainerNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.rules.destinationContainerNameRef.policy

"Policies for referencing."

### fn spec.forProvider.rules.destinationContainerNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.rules.destinationContainerNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.rules.destinationContainerNameSelector

"Selector for a Container in storage to populate destinationContainerName."

### fn spec.forProvider.rules.destinationContainerNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.rules.destinationContainerNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.rules.destinationContainerNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.rules.destinationContainerNameSelector.policy

"Policies for selection."

### fn spec.forProvider.rules.destinationContainerNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.rules.destinationContainerNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.rules.sourceContainerNameRef

"Reference to a Container in storage to populate sourceContainerName."

### fn spec.forProvider.rules.sourceContainerNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.rules.sourceContainerNameRef.policy

"Policies for referencing."

### fn spec.forProvider.rules.sourceContainerNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.rules.sourceContainerNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.rules.sourceContainerNameSelector

"Selector for a Container in storage to populate sourceContainerName."

### fn spec.forProvider.rules.sourceContainerNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.rules.sourceContainerNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.rules.sourceContainerNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.rules.sourceContainerNameSelector.policy

"Policies for selection."

### fn spec.forProvider.rules.sourceContainerNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.rules.sourceContainerNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.sourceStorageAccountIdRef

"Reference to a Account in storage to populate sourceStorageAccountId."

### fn spec.forProvider.sourceStorageAccountIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.sourceStorageAccountIdRef.policy

"Policies for referencing."

### fn spec.forProvider.sourceStorageAccountIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.sourceStorageAccountIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.sourceStorageAccountIdSelector

"Selector for a Account in storage to populate sourceStorageAccountId."

### fn spec.forProvider.sourceStorageAccountIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.sourceStorageAccountIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.sourceStorageAccountIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.sourceStorageAccountIdSelector.policy

"Policies for selection."

### fn spec.forProvider.sourceStorageAccountIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.sourceStorageAccountIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withDestinationStorageAccountId

```ts
withDestinationStorageAccountId(destinationStorageAccountId)
```

"The ID of the destination storage account. Changing this forces a new Storage Object Replication to be created."

### fn spec.initProvider.withRules

```ts
withRules(rules)
```

"One or more rules blocks as defined below."

### fn spec.initProvider.withRulesMixin

```ts
withRulesMixin(rules)
```

"One or more rules blocks as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withSourceStorageAccountId

```ts
withSourceStorageAccountId(sourceStorageAccountId)
```

"The ID of the source storage account. Changing this forces a new Storage Object Replication to be created."

## obj spec.initProvider.destinationStorageAccountIdRef

"Reference to a Account in storage to populate destinationStorageAccountId."

### fn spec.initProvider.destinationStorageAccountIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.destinationStorageAccountIdRef.policy

"Policies for referencing."

### fn spec.initProvider.destinationStorageAccountIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.destinationStorageAccountIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.destinationStorageAccountIdSelector

"Selector for a Account in storage to populate destinationStorageAccountId."

### fn spec.initProvider.destinationStorageAccountIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.destinationStorageAccountIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.destinationStorageAccountIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.destinationStorageAccountIdSelector.policy

"Policies for selection."

### fn spec.initProvider.destinationStorageAccountIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.destinationStorageAccountIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.rules

"One or more rules blocks as defined below."

### fn spec.initProvider.rules.withCopyBlobsCreatedAfter

```ts
withCopyBlobsCreatedAfter(copyBlobsCreatedAfter)
```

"The time after which the Block Blobs created will be copies to the destination. Possible values are OnlyNewObjects, Everything and time in RFC3339 format: 2006-01-02T15:04:00Z. Defaults to OnlyNewObjects."

### fn spec.initProvider.rules.withDestinationContainerName

```ts
withDestinationContainerName(destinationContainerName)
```

"The destination storage container name. Changing this forces a new Storage Object Replication to be created."

### fn spec.initProvider.rules.withFilterOutBlobsWithPrefix

```ts
withFilterOutBlobsWithPrefix(filterOutBlobsWithPrefix)
```

"Specifies a list of filters prefixes, the blobs whose names begin with which will be replicated."

### fn spec.initProvider.rules.withFilterOutBlobsWithPrefixMixin

```ts
withFilterOutBlobsWithPrefixMixin(filterOutBlobsWithPrefix)
```

"Specifies a list of filters prefixes, the blobs whose names begin with which will be replicated."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.rules.withSourceContainerName

```ts
withSourceContainerName(sourceContainerName)
```

"The source storage container name. Changing this forces a new Storage Object Replication to be created."

## obj spec.initProvider.rules.destinationContainerNameRef

"Reference to a Container in storage to populate destinationContainerName."

### fn spec.initProvider.rules.destinationContainerNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.rules.destinationContainerNameRef.policy

"Policies for referencing."

### fn spec.initProvider.rules.destinationContainerNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.rules.destinationContainerNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.rules.destinationContainerNameSelector

"Selector for a Container in storage to populate destinationContainerName."

### fn spec.initProvider.rules.destinationContainerNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.rules.destinationContainerNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.rules.destinationContainerNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.rules.destinationContainerNameSelector.policy

"Policies for selection."

### fn spec.initProvider.rules.destinationContainerNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.rules.destinationContainerNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.rules.sourceContainerNameRef

"Reference to a Container in storage to populate sourceContainerName."

### fn spec.initProvider.rules.sourceContainerNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.rules.sourceContainerNameRef.policy

"Policies for referencing."

### fn spec.initProvider.rules.sourceContainerNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.rules.sourceContainerNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.rules.sourceContainerNameSelector

"Selector for a Container in storage to populate sourceContainerName."

### fn spec.initProvider.rules.sourceContainerNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.rules.sourceContainerNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.rules.sourceContainerNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.rules.sourceContainerNameSelector.policy

"Policies for selection."

### fn spec.initProvider.rules.sourceContainerNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.rules.sourceContainerNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.sourceStorageAccountIdRef

"Reference to a Account in storage to populate sourceStorageAccountId."

### fn spec.initProvider.sourceStorageAccountIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.sourceStorageAccountIdRef.policy

"Policies for referencing."

### fn spec.initProvider.sourceStorageAccountIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.sourceStorageAccountIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.sourceStorageAccountIdSelector

"Selector for a Account in storage to populate sourceStorageAccountId."

### fn spec.initProvider.sourceStorageAccountIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.sourceStorageAccountIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.sourceStorageAccountIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.sourceStorageAccountIdSelector.policy

"Policies for selection."

### fn spec.initProvider.sourceStorageAccountIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.sourceStorageAccountIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."